_infrastructure/longhorn/patch-replicacount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
spec:
  template:
    spec:
      containers:
        - name: longhorn-driver-deployer
